--- a/public/style.css
+++ b/public/style.css
@@ -9,16 +9,20 @@ body {
 }
 
 header {
-    background-color: #ffd95a;
+    /* background-color: #ffd95a; */
+    background-image: url(images/header.png);
+    width: 100%;
     height: 50vh;
+    background-size: cover;
     transform: skewY(-5deg);
-    z-index: 1;
+    z-index: 2;
 }
 
 .tambal {
     background-color: #ffd95a;
     height: 20vh;
-    transform: skewY(5deg);
+    /* transform: skewY(5deg); */
+    z-index: 1;
 }
 
 .wrapper {
@@ -26,6 +30,7 @@ header {
     justify-content: space-between;
     align-items: center;
     margin: 0 5rem;
+    transform: skewY(5deg);
 }
 
 .title img {
@@ -88,11 +93,12 @@ header {
     font-weight: 700;
     text-align: left;
     width: 50%;
+    transform: skewY(5deg);
 }
 
 .big-title p {
     line-height: 90%;
-    margin: 3rem 6rem;
+    margin: 0 6rem;
 }
 
 .events {
