--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap");
 
+:root {
+    --kuning: #ffd95a;
+    --oren: #f77e21;
+    --itemTerang: #333;
+    --item: #000;
+    --coklat: #4c3d3d;
+    --putih: #f5f5f5;
+}
+
 body {
     background-color: #f5f5f5;
     font-family: "Poppins", sans-serif;
@@ -8,8 +17,15 @@ body {
     padding: 0;
 }
 
+section {
+    height: 100vh;
+}
+
 .sec1 {
-    background-color: red;
+    /* background-image: url(images/stripBlur.png); */
+    background: linear-gradient(to top, var(--kuning), var(--oren));
+    height: 50vh;
+    padding: 1rem;
 }
 
 .navbar {
@@ -17,7 +33,13 @@ body {
     align-items: center;
     justify-content: space-between;
     margin: 0 5rem;
-    background-color: orangered;
+    /* outline: 2px solid red; */
+}
+
+.contact-button {
+    background-color: var(--coklat);
+    border-radius: 35px;
+    padding: 0.5rem 1rem;
 }
 
 .navbar .logo {
@@ -38,19 +60,118 @@ body {
     gap: 2rem;
 }
 
-/* mobile view */
-@media (max-width: 480px) {
-    .navbar {
-        margin: 0 2rem;
+.menu li a {
+    text-decoration: none;
+    color: var(--itemTerang);
+}
+
+.menu li a .contact-button {
+    color: var(--putih);
+}
+
+.menu-bar {
+    display: none;
+    align-items: center;
+}
+
+.hero .header {
+    max-width: 50vw;
+    margin: 2rem 5rem;
+}
+
+.hero .header span {
+    font-size: 8.5rem;
+    font-weight: 600;
+    line-height: 1;
+    text-transform: uppercase;
+}
+
+.sec2 {
+    margin: 5rem;
+    display: flex;
+    justify-content: center;
+    height: auto;
+}
+
+.sec3 {
+    height: auto;
+}
+
+.about {
+    margin: 5rem;
+    display: flex;
+    justify-content: center;
+}
+
+.about-content {
+    max-width: 50vw;
+}
+
+.about-image {
+    display: flex;
+    justify-content: center;
+    max-width: 50vw;
+    object-fit: cover;
+}
+
+/* MEDIA QUERY */
+
+/* tab view */
+@media (max-width: 863px) {
+    section {
+        height: auto;
     }
-    .navbar .logo img {
+
+    .navbar .menu {
         display: none;
+    }
+
+    .navbar .menu-bar {
+        display: block;
+    }
+
+    .hero .header {
+        margin: 3rem 5rem;
+    }
+
+    .hero .header span {
+        font-size: 5rem;
     }
 }
 
-/* tab view */
-@media (max-width: 816px) {
-    .navbar .menu {
+/* mobile view */
+@media (max-width: 556px) {
+    section {
+        height: auto;
+    }
+
+    .sec1 {
+        height: auto;
+    }
+
+    .navbar {
+        margin: 0 2rem;
+    }
+
+    .navbar .logo img {
         display: none;
+    }
+
+    .navbar .logo h1 {
+        font-size: 1.2rem;
+    }
+
+    .navbar .menu-bar img {
+        max-width: 25px;
+        height: auto;
+    }
+
+    .hero .header {
+        font-size: 0.5rem;
+        margin: auto 2rem;
+    }
+
+    .hero .header span {
+        font-size: 2.5rem;
     }
 }
