--- a/public/style.css
+++ b/public/style.css
@@ -10,11 +10,12 @@ body {
 
 header {
     /* background-color: #ffd95a; */
-    background-image: url(images/header.png);
+    /* background-image: url(images/header.png); */
+    background-image: url(images/stripBlur.png);
     width: 100%;
     height: 50vh;
     background-size: cover;
-    transform: skewY(-5deg);
+    /* transform: skewY(-5deg); */
     z-index: 2;
 }
 
@@ -30,7 +31,7 @@ header {
     justify-content: space-between;
     align-items: center;
     margin: 0 5rem;
-    transform: skewY(5deg);
+    /* transform: skewY(5deg); */
 }
 
 .title img {
@@ -93,7 +94,7 @@ header {
     font-weight: 700;
     text-align: left;
     width: 50%;
-    transform: skewY(5deg);
+    /* transform: skewY(5deg); */
 }
 
 .big-title p {
