--- a/public/styles.css
+++ b/public/styles.css
@@ -9,12 +9,27 @@
     --putih: #f5f5f5;
 }
 
+#scrollToTopBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: var(--coklat);
+    color: #fff;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 35px;
+    cursor: pointer;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+}
+
 body {
     background-color: #f5f5f5;
     font-family: "Poppins", sans-serif;
     font-size: 16px;
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth;
 }
 
 section {
@@ -34,12 +49,6 @@ section {
     justify-content: space-between;
     margin: 0 5rem;
     /* outline: 2px solid red; */
-}
-
-.contact-button {
-    background-color: var(--coklat);
-    border-radius: 35px;
-    padding: 0.5rem 1rem;
 }
 
 .navbar .logo {
@@ -62,11 +71,19 @@ section {
 
 .menu li a {
     text-decoration: none;
+    /* color: var(--itemTerang); */
+}
+
+.navlink {
     color: var(--itemTerang);
 }
 
-.menu li a .contact-button {
+.contact-button {
+    background-color: var(--coklat);
+    border-radius: 35px;
+    padding: 0.5rem 1rem;
     color: var(--putih);
+    text-decoration: none;
 }
 
 .menu-bar {
@@ -86,6 +103,14 @@ section {
     text-transform: uppercase;
 }
 
+.evnt {
+    display: block;
+}
+
+.sign {
+    display: none;
+}
+
 .sec2 {
     margin: 5rem;
     display: flex;
@@ -93,14 +118,40 @@ section {
     height: auto;
 }
 
+.caro h2 {
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 4rem;
+    margin: 0;
+    padding: 0;
+}
+
+.car1 {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 1rem auto;
+    gap: 1rem;
+    justify-content: center;
+}
+
+.car1 img {
+    max-width: 300px;
+    max-height: 300px;
+    border-radius: 35px;
+}
+
 .sec3 {
     height: auto;
 }
 
 .about {
-    margin: 5rem;
+    margin: 15rem 5rem;
     display: flex;
     justify-content: center;
+}
+
+.about h2 {
+    text-transform: uppercase;
 }
 
 .about-content {
@@ -114,20 +165,88 @@ section {
     object-fit: cover;
 }
 
+.about-image img {
+    max-width: 300px;
+    max-height: 300px;
+    overflow-wrap: normal;
+    border-radius: 35px;
+}
+
+.sec4 {
+    background-color: var(--kuning);
+    height: auto;
+    padding-bottom: 2rem;
+}
+
+.team {
+    padding: 1rem 0;
+    margin: 0 5rem;
+    justify-content: center;
+    text-align: center;
+}
+
+.team h2 {
+    text-transform: uppercase;
+}
+
+.team img {
+    max-width: 300px;
+    max-height: 300px;
+    border-radius: 35px;
+    border-radius: 35px;
+}
+
+.team-atas {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    max-width: 100%;
+    flex-wrap: wrap;
+}
+
+.team-bawah {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    max-width: 100%;
+    flex-wrap: wrap;
+}
+
+.footer {
+    background-color: var(--coklat);
+    color: var(--putih);
+    padding: 20px;
+    text-align: center;
+}
+
 /* MEDIA QUERY */
 
 /* tab view */
-@media (max-width: 863px) {
+@media (max-width: 894px) {
     section {
         height: auto;
     }
 
-    .navbar .menu {
-        display: none;
+    .navbar {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        background-color: rgba(255, 255, 255, 0.4);
+        border-radius: 35px;
+        padding: 0.25rem 0.5rem;
+        overflow: auto;
     }
 
     .navbar .menu-bar {
         display: block;
+    }
+
+    .navbar .logo {
+        display: none;
+    }
+
+    .hero {
+        margin-top: 1rem;
     }
 
     .hero .header {
@@ -136,6 +255,32 @@ section {
 
     .hero .header span {
         font-size: 5rem;
+    }
+
+    .evnt {
+        display: none;
+    }
+
+    .sign {
+        display: block;
+    }
+
+    .about {
+        display: block;
+        margin: 5rem;
+    }
+
+    .about-content {
+        text-align: center;
+        margin: auto;
+    }
+
+    .about-image {
+        margin: 2rem auto;
+    }
+
+    .caro h2 {
+        font-size: 3rem;
     }
 }
 
@@ -153,12 +298,16 @@ section {
         margin: 0 2rem;
     }
 
-    .navbar .logo img {
+    /* .navbar .logo img {
         display: none;
-    }
+    } */
 
     .navbar .logo h1 {
         font-size: 1.2rem;
+    }
+
+    .navbar .navbar-menu {
+        font-size: 0.65rem;
     }
 
     .navbar .menu-bar img {
@@ -169,9 +318,22 @@ section {
     .hero .header {
         font-size: 0.5rem;
         margin: auto 2rem;
+        max-width: 100vw;
     }
 
     .hero .header span {
         font-size: 2.5rem;
+    }
+
+    .sec2 {
+        margin-top: 3rem;
+    }
+
+    .caro h2 {
+        font-size: 2rem;
+    }
+
+    .car1 {
+        margin: 0 auto;
     }
 }
