--- a/public/styles.css
+++ b/public/styles.css
@@ -76,6 +76,13 @@ section {
 
 .navlink {
     color: var(--itemTerang);
+    transition: 0.3s ease;
+    display: inline-block;
+}
+
+.navlink:hover {
+    transform: scale(1.1);
+    color: var(--putih);
 }
 
 .contact-button {
@@ -84,6 +91,12 @@ section {
     padding: 0.5rem 1rem;
     color: var(--putih);
     text-decoration: none;
+    transition: 0.3s ease;
+    display: inline-block;
+}
+
+.contact-button:hover {
+    transform: scale(1.1);
 }
 
 .menu-bar {
@@ -192,14 +205,17 @@ section {
     text-align: center;
 }
 
-.team h2 {
+.team h1 {
     text-transform: uppercase;
+    transform: scale(1.75);
 }
 
 .team img {
-    max-width: 300px;
-    max-height: 300px;
-    border-radius: 35px;
+    max-width: 100%; /* Ensure the image doesn't exceed its container's width */
+    max-height: 100%; /* Ensure the image doesn't exceed its container's height */
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     border-radius: 35px;
 }
 
@@ -209,6 +225,9 @@ section {
     gap: 1rem;
     max-width: 100%;
     flex-wrap: wrap;
+    position: relative;
+    width: 100%;
+    overflow: hidden;
 }
 
 .team-bawah {
@@ -217,6 +236,15 @@ section {
     gap: 1rem;
     max-width: 100%;
     flex-wrap: wrap;
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+}
+
+.team img {
+    max-width: 300px; /* Set a maximum width */
+    max-height: 300px; /* Set a maximum height */
+    aspect-ratio: 1 / 1; /* Maintain a 1:1 aspect ratio */
 }
 
 .footer {
